--- a/TKV2025_soubory/sheet028.htm
+++ b/TKV2025_soubory/sheet028.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -46,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12957 style='border-collapse:
- collapse;table-layout:fixed;width:9732pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=13085 style='border-collapse:
+ collapse;table-layout:fixed;width:9828pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -256,8 +255,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=208 style='mso-width-source:userset;mso-width-alt:7606;
+ width:156pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -396,7 +395,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=208 style='width:156pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1086,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>27</td>
+  <td class=xl165 style='border-left:none'>28</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1215,13 +1214,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>44</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>28000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>46</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>29300</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>16,8</td>
+  <td class=xl148 style='border-top:none;border-left:none'>16,5</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1351,13 +1350,13 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
   [CZE059373]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>34</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>36</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>23</td>
+  <td class=xl165 style='border-top:none;border-left:none'>24</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1575,9 +1574,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bílek Radek [CZE008106]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>40</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>17500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>34</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,9 +1799,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>32</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>17000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bílek Radek [CZE008106]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>42</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2024,8 +2023,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Bílek Radek [CZE056362]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>15800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>32</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17300</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,10 +2157,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Folejtar Štěpán
-  [CZE071065]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>15200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2506,17 +2505,17 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
-  [CZE071305]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Folejtar Štěpán
+  [CZE071065]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Kameník Roman [CZE059800]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>6</td>
+  <td class=xl82 style='border-top:none;border-left:none'>7</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2680,9 +2679,11 @@ else
   [CZE009044]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1500</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2873,9 +2874,11 @@ else
   [CZE071065]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bílek Radek [CZE056362]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1500</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2889,10 +2892,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
-  [CZE063138]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>11500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3064,9 +3066,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Majer Vít [CZE001201]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3080,9 +3084,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>11100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
+  [CZE063138]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11500</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3252,9 +3257,12 @@ else
   [CZE071305]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
+  [CZE059373]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3269,8 +3277,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Meister Lukáš [CZE074613]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>26</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3440,9 +3448,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bílek Radek [CZE008106]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3626,9 +3636,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3816,9 +3829,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Bílek Radek [CZE056362]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Urbánková Kristýna
+  [CZE076210]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4000,9 +4016,11 @@ else
   [CZE063138]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Meister Lukáš [CZE074613]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4185,9 +4203,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>600</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -5784,9 +5804,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>25</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Velek Václav [CZE040104]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Urbánková Kristýna
+  [CZE076210]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5941,10 +5962,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>26</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Urbánková Kristýna
-  [CZE076210]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Velek Václav [CZE040104]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -15580,7 +15600,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=208 style='width:156pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
