--- a/TKV2025_soubory/sheet017.htm
+++ b/TKV2025_soubory/sheet017.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -46,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12063 style='border-collapse:
- collapse;table-layout:fixed;width:9079pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12188 style='border-collapse:
+ collapse;table-layout:fixed;width:9173pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -255,8 +254,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
+ width:154pt'>
  <col class=xl70 width=90 style='mso-width-source:userset;mso-width-alt:3291;
  width:68pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -395,7 +394,7 @@ else
   <td class=xl70 width=90 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=205 style='width:154pt'></td>
   <td class=xl70 width=90 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1084,7 +1083,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>27</td>
+  <td class=xl165 style='border-left:none'>28</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1214,13 +1213,13 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
   [CZE071305]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>25</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13350</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>13,7</td>
+  <td class=xl148 style='border-top:none;border-left:none'>13,3</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1355,7 +1354,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>26</td>
+  <td class=xl165 style='border-top:none;border-left:none'>27</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1801,8 +1800,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
   [CZE072576]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8850</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>22</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2693,9 +2692,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>950</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Meister Lukáš [CZE074613]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2711,8 +2712,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Novák Jaroslav
   [CZE072575]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5650</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2894,9 +2895,12 @@ else
   [CZE070408]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2911,8 +2915,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Truhlář Jan [CZE078877]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3092,9 +3096,12 @@ else
   [CZE078137]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Novák Jaroslav
+  [CZE072575]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3291,9 +3298,11 @@ else
   [CZE009044]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Truhlář Jan [CZE078877]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3491,9 +3500,12 @@ else
   [CZE063138]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
+  [CZE072576]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4873,9 +4885,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>19</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Duba Leoš [CZE068578]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2850</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Meister Lukáš [CZE074613]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5053,9 +5065,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>20</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Šimek Antonín [CZE013993]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Duba Leoš [CZE068578]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2850</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5220,9 +5232,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Šovčík Patrik [CZE074532]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2750</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šimek Antonín [CZE013993]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5380,9 +5392,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šovčík Patrik [CZE074532]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2750</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5537,9 +5549,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>23</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2650</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5681,9 +5693,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>24</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Meister Lukáš [CZE074613]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2450</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2650</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5823,7 +5835,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>25</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Klement Robert
+  [CZE070408]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2300</td>
   <td class=xl70></td>
@@ -5963,8 +5976,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>26</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Klement Robert
-  [CZE070408]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2300</td>
   <td class=xl70></td>
@@ -6511,7 +6523,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>30</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Navrkal David [CZE058411]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2000</td>
   <td class=xl70></td>
@@ -6646,7 +6658,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>31</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Navrkal David [CZE058411]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2000</td>
   <td class=xl70></td>
@@ -15646,7 +15658,7 @@ else
   <td width=90 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=205 style='width:154pt'></td>
   <td width=90 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
